attempting to fix the ipad issue of too much space in the tab result area

--- a/public/themes/v2/stylesheets/all.css
+++ b/public/themes/v2/stylesheets/all.css
@@ -387,7 +387,7 @@
 
 	#results {
 		position: relative;
-		padding: 1% 3%;
+		padding: 1%;
 		border-top: 1px solid #808080;
 		border-left: 1px solid #808080;
 	}
